--- a/contactpage.html
+++ b/contactpage.html
@@ -62,8 +62,7 @@
             <div class="footeritem">
                 <div class="footertitle">Open hours</div>
                 <ul>
-                    <li>Monday 11am-7pm</li>
-                    <li>Tuesday-Friday 11am-8pm</li>
+                    <li>Monday-Friday 9am-8pm</li>
                     <li>Saturday 10am-6pm</li>
                     <li>Sunday 11am-6pm</li>
                 </ul>
@@ -71,10 +70,9 @@
             <div class="footeritem">
                 <div class="footertitle">Extra Links</div>
                 <ul>
-                    <li><a href="">About</a></li>
+                    <li><a href="">Produit</a></li>
                     <li><a href="">Service</a></li>
-                    <li><a href="">Company news</a></li>
-                    <li><a href="">Investors</a></li>
+                    <li><a href="">News</a></li>
                 </ul>
             </div>
             <div class="footeritem">
