--- a/produit.html
+++ b/produit.html
@@ -448,8 +448,8 @@
                         (Silicone polyvalent et en maille de bijoux) - Cadrans interchangeables - Mesure de l’activité
                         quotidienne -
                         Couleur Argent</p>
-                    < class="product-price">Prix : 175 DT</p>
-                        <button>Acheter</button>
+                    <p class="product-price">Prix : 175 DT</p>
+                    <button>Acheter</button>
                 </div>
             </section>
             <section class="product">
