corr button acheter

--- a/produit.html
+++ b/produit.html
@@ -85,13 +85,11 @@
             <div>
                 <h2>Smartphone huawei nova y90</h2>
                 <p>Double SIM - Ecran 6.7" IPS LCD Full HD+ 90Hz - Résolution 1080 x 2388 - Processeur Qualcomm SM6225
-                    Snapdragon 680 4G, Octa-core (4x2.4 GHz Kryo 265 Gold & 4x1.9 GHz Kryo 265 Silver), Adreno 610 -
-                    EMUI 12 -
+                    Snapdragon 680 4G, Octa-core, Adreno 610 -
                     RAM 6 Go - Mémoire 128 Go - Appareil photo Triple 50 MP + 2 MP + 2 MP (arriére), 8 MP (Avant) - Wifi
-                    - 4G -
-                    Bluetooth 5.0 - Lecteur d'empreinte digitale - Batterie 5000 mAh - HUAWEI SuperCharge (Max 40 W) -
+                    4G Bluetooth 5.0 Lecteur d'empreinte digitale - Batterie 5000 mAh - HUAWEI SuperCharge (Max 40 W) -
                     50% en 30
-                    minutes - Couleur Bleu - Garantie 1 an + Abonnement IPTV 12mois</p>
+                    minutes - Couleur Bleu - Garantie 1 an</p>
                 <p class="product-price">Prix : 850 DT</p>
                 <button>Acheter</button>
             </div>
@@ -104,9 +102,7 @@
                 <h2>Smartphone huawei nova y91</h2>
                 <p>Double SIM - Écran 6,95" LCD - Résolution FHD+ ( 2376 × 1080 pixels) - Taux de rafraîchissement 90Hz
                     - Taux
-                    d'échantillonnage tactile de 270 Hz - Qualcomm Snapdragon 680 (4 × Cortex-A73 basés sur 2,4 GHz + 4
-                    ×
-                    Cortex-A53 basés sur 1,9 GHz) - Système opérateur EMUI 13 - RAM 8 Go - Mémoire 256 Go - Caméra
+                    d'échantillonnage tactile de 270 Hz - Système opérateur EMUI 13 - RAM 8 Go - Mémoire 256 Go - Caméra
                     arrière:
                     Appareil photo haute résolution 50 MP (ouverture F1.8), Caméra de profondeur 2 MP (ouverture F2.4) -
                     Caméra
@@ -130,7 +126,7 @@
                     autofocus,
                     Flash, panorama, vidéo 4K, caméra frontale de 32 MP (f/2.2) - Connectivité BlueTooth 5.3 - Wi-Fi -
                     Wi-Fi
-                    Direct - USB Type C - 5g - Lecteur d'empreinte digitale </p>
+                </p>
                 <p class="product-price">Prix : 1874 DT</p>
                 <button>Acheter</button>
             </div>
@@ -145,11 +141,9 @@
                     2640
                     pixels, technologie Ultra Thin Glass, résolution 260 x 512 pixels - Processeur Qualcomm Snapdragon
                     8+ Gen 1
-                    (3.18 GHz + 2.7 GHz + 2 GHz) - RAM 8 Go - Mémoire 128 Go Android 12 (surcouche Samsung One UI 4.1.1)
-                    -
-                    Caméras arrière : Double capteur 12 MP (ouverture f/1.8, FOV 83°) + 12 MP (Dual Pixel, ultra grand
-                    angle,
-                    ouverture f/2.2, FOV 123°), vidéo 4K@60fps - Caméra frontale 10 MP (ouverture f/2.4)</p>
+                    (3.18 GHz + 2.7 GHz + 2 GHz) - RAM 8 Go - Mémoire 128 Go Android 12
+                    Caméras arrière : Double capteur 12 MP (ouverture f/1.8, FOV 83°) + 12 MP, vidéo 4K@60fps - Caméra
+                    frontale 10 MP</p>
                 <p class="product-price">Prix : 3900 DT</p>
                 <button>Acheter</button>
             </div>
@@ -165,7 +159,10 @@
                     grand-angle),
                     F/1.8 (grand-angle) (Arrière), 12MP TrueDepth F/2.2 (Avant) - Wifi - 4G+ - Bluetooth 5.0 - NFC -
                     Batterie
-                    3110 mAh - Garantie 1 an</p>
+                    3110 mAh -Largeur : 75,7 mm
+                    Hauteur : 150,9 mm
+                    Épaisseur : 8,3 mm
+                    - Garantie 1 an</p>
                 <p class="product-price">Prix : 2260 DT</p>
                 <button>Acheter</button>
             </div>
@@ -175,10 +172,9 @@
             <img src="images/smartphone-apple-iphone-14-pro-5g-128-go-purple.jpg" alt="smartphone apple iphone 14 pro">
             <div>
                 <h2>Smartphone apple iphone 14 pro</h2>
-                <p>Ecran Super Retina XDR OLED 6.1" - Résolution 1179 x 2556 px - Processeur Apple A16 Bionic Hexa-Core
+                <p>Ecran Super Retina XDR OLED 6.1"- Processeur Apple A16 Bionic Hexa-Core
                     -
-                    Stockage 128 Go - 3x Appareils Photo Arrière 48 Mpixel - Mégapixels (grand‑angle et ultra
-                    grand‑angle
+                    Stockage 128 Go - 3x Appareils Photo Arrière 48 Mpixel - Mégapixels (
                     Grand‑angle: ouverture F/1,5 Ultra grand‑angle : ouverture F/2,4 et champ de vision de 120°) -
                     Système iOS
                     16 - 5G - Wifi - NFC - Bluetooth 5.3 - Wi-Fi 6 - Dimensions 147.5 x 71.5 x 7.85 mm - Couleur Purple
@@ -197,7 +193,7 @@
                     -
                     Stockage 256 Go - 3x Appareils Photo Arrière 48 Mpixel - Mégapixels (grand‑angle et ultra
                     grand‑angle
-                    Grand‑angle: ouverture F/1,5 Ultra grand‑angle : ouverture F/2,4 et champ de vision de 120°) -
+                    Grand‑angle: ouverture F/1,5 Ultra grand‑angle : ouverture F/2,4 ) -
                     Système iOS
                     16 - 5G - Wifi - NFC - Bluetooth 5.3 - Wi-Fi 6 - Dimensions 147.5 x 71.5 x 7.85 mm - Couleur Gold -
                     Garantie
@@ -232,7 +228,8 @@
                     mémoire
                     - Disque 256 Go SSD PCIe NVMe M.2 - Carte graphique AMD Radeon Intégrée - Lecteur de cartes - Webcam
                     HD 720p
-                    HP True Vision - Wifi - Bluetooth - HDMI - 1x USB Type C - 2x USB 3.1 - Windows 10 - Couleur Noir -
+                    HP True Vision - Wifi - Bluetooth - HDMI - 1x USB Type C - 2x USB 3.1 - Windows 10 - Couleur Noir
+                    ,blanc , Gris-
                     Garantie
                     1 an </p>
                 <p class="product-price">Prix : 794 DT</p>
@@ -249,7 +246,7 @@
                     cache - 8
                     Go de mémoire - Disque 1 To - Intel UHD Graphics - Wifi - Bluetooth - USB 3.0 - USB 2.0 - HDMI -
                     Ethernet -
-                    Couleur Noir - WINDOWS 10 PRO - Garantie 1 an</p>
+                    Couleur Noir , Blanc , Rouge - WINDOWS 10 PRO - Garantie 1 an</p>
                 <p class="product-price">Prix : 899 DT</p>
                 <button>Acheter</button>
             </div>
@@ -312,11 +309,11 @@
                     Ghz, 12
                     Mo de mémoire cache - Mémoire 8 Go DDR4-3200 MHz - Disque 512 Go SSD M.2 NVMe PCIe - Carte Graphique
                     NVIDIA
-                    GeForce RTX 2050, 4 Go de mémoire GDDR6 - Webcam HD (30 ips à 720p) - Clavier rétroéclairé unique
+                    GeForce RTX 2050, 4 Go de mémoire GDDR6 - Webcam HD - Clavier rétroéclairé unique
                     (rouge) -
                     Wi-Fi 6 - Bluetooth 5.2 - 2x haut-parleur 2W - 1x entrée micro, 1x sortie casque - 1x USB-C 3.2 - 3x
                     USB 3.2
-                    - 1x HDMI - 1x RJ45 - FreeDos - Couleur Noir - Garantie 1 an</p>
+                    - Couleur Noir - Garantie 1 an</p>
                 <p class="product-price">Prix : 2300 DT</p>
                 <button>Acheter</button>
             </div>
@@ -359,15 +356,12 @@
                 <img src="images/montre-connectee-infinix-xw1-pro-noir.jpg" alt="montre connectee infinix xw1 pro noir">
                 <div>
                     <h2>montre connectee infinix xw1 pro noir</h2>
-                    <p>Montre Connectée INFINIX XW1 PRO - Écran vif tactile1.8″ IPS (240 x 286 px) - Connectivité:
+                    <p>Montre Connectée INFINIX XW1 PRO- Connectivité:
                         Bluetooth 5.2 -
                         Système d''exploitation: Android et iOS - Capacité de batterie: 300mAh - Autonomie: 7 jours -
                         Mesure de
-                        Fréquence cardiaque, oxygène sanguin, sommeil, respiration, pression - Santé Intégrale -
-                        Suppression des
-                        appels bluetooth - Plus de 25 modes sportifs - Plus de 100 cadrans de montre élégants - Étanche
-                        IP68 -
-                        Charge Magnétique - Couleur Noir - Garantie 1 an</p>
+                        Fréquence cardiaque, oxygène sanguin, sommeil, respiration, pression - Santé Intégrale - Couleur
+                        Noir - Garantie 1 an</p>
                     <p class="product-price">Prix : 79 DT</p>
                     <button>Acheter</button>
                 </div>
@@ -378,12 +372,8 @@
                     alt="smartwatch pour enfant forever rose">
                 <div>
                     <h2>smartwatch pour enfant forever rose</h2>
-                    <p>SmartWatch pour enfant Forever KW-60 avec Puce- Fonction GPS - Écran coloré 1.44″ - Fonctions
-                        localisation
-                        LBS, appels téléphoniques, surveillance des voix , caméra à distance, arrêt à distance, trouver
-                        la montre,
-                        jeu de maths, prix, lampe de poche - Microphone intégré, avec haut-parleur - Temps de charge 2
-                        heures -
+                    <p> Fonction GPS - Écran coloré 1.44″ - Fonctions
+                        localisation, appels téléphoniques, caméra à distance- Temps 2 heures -
                         Temps d’attente maximum 3 jours - Batterie 400 mAh - Longueur de bande 230 mm - Application
                         Forever Care
                         (IOS) ou Forever KidsCare (Android) - Couleur Rose - Garantie 1 an</p>
@@ -401,7 +391,7 @@
                         modes Sport - Batterie : 210 mAh - Charge magnétique - Temps de charge : moins de 120 minutes
                         -Bluetooth 5.1
                         - Poids : 14,9 g - Dimmensions : 42,81x 25,42x 9,99 mm - Longueur réglable : 135 à 215 mm -
-                        Couleur : Noir -
+                        Couleur : Noir , blanc- rose ,Argent
                         Garantie 1 an</p>
                     <p class="product-price">Prix : 140 DT</p>
                     <button>Acheter</button>
@@ -429,7 +419,8 @@
                     <p>Smartwatch Redmi 3 Active - Écran LCD de 1,83 pouces - Résolution : 240×280 pixels - Durée
                         d'utilisation
                         typique : 12 jours - Durée d'utilisation intensive : 8 jours - Capacité : 289 mAh - Microphone -
-                        Haut-parleur - Résistant à l'eau 5 ATM - Dimensions : 46.94 x 38.88 x 10.94mm - Couleur : Noir -
+                        Haut-parleur - Résistant à l'eau 5 ATM - Dimensions : 46.94 x 38.88 x 10.94mm - Couleur :
+                        Noir,Blanc,Argent -
                         Garantie 1
                         an</p>
                     <p class="product-price">Prix : 170 DT</p>
@@ -456,12 +447,9 @@
                 <img src="images/montre-connectee-artek-pxs-gold.jpg" alt="montre connectee artek pxs gold">
                 <div>
                     <h2>montre connectee artek pxs gold</h2>
-                    <p>DMontre Connectée ARTEK PXS - Écran : tactile multiple face 1.81" HD - - Connectivité : Bluetooth
+                    <p>Montre Connectée ARTEK PXS - Écran : tactile multiple face 1.81" HD - - Connectivité : Bluetooth
                         5.0 -
-                        Alliage D'aluminium - GPS - Résistance à l'eau - Fonctions : Appel, fréquence cardiaque, tension
-                        artérielle,
-                        podomètre, surveillance du sommeil, Oxygène du sang, 7 modes sportifs multiples,
-                        waterproof(IP67) - Batterie
+                        Alliage D'aluminium - GPS - Résistance à l'eau - Batterie
                         : 220mAh - Autonomie : jusqu'à 7 Jours - Compatibilité : Support Android 4.4 and above , Apple
                         IOS 8.0 or
                         Later - Mémoire : 4Go - Couleur Gold - Garantie 1 an</p>
