--- a/produit.html
+++ b/produit.html
@@ -40,7 +40,7 @@
         <div class="titre">
             <h2 class="first-line">Get to know</h2>
             <h1>Our Products</h1>
-            <h2 class="third-line">This is why we are so awesome</h2>
+            <h2 class="third-line">Quality is our Priority</h2>
 
         </div>
 
